# stegodemo

./: README.md  morebits.py  requirements.txt  simple.py  steg.py
stego_cpp/: CMakeLists.txt  LICENSE  Makefile  README.md  setup.sh
stego_cpp/include/: gpt2_model.h  stego.h
stego_cpp/src/: gpt2_model.cpp  main.cpp  stego.cpp
